--- a/style.css
+++ b/style.css
@@ -83,6 +83,8 @@ section {
   }
   .section {
     margin-bottom: 2rem;
+    margin-left: 7%;
+    margin-right: 7%;
   }
   .flex-area {
     display: block; 
@@ -360,7 +362,7 @@ input[type="text"] {
 }
 
 .navigation-items a{
-  font-size: 24px; 
+  font-size: 18px; 
   font-family: 'Roboto Condensed', sans-serif;
   text-decoration: none;
   color: white;
@@ -399,7 +401,7 @@ input[type="text"] {
   }
 
   .navigation-items a {
-    font-size: 18px;
+    font-size: 12px;
     margin-left: 1rem;
     margin-right: 1rem;
   }
