--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ section {
 
 .sub-section { /*for every sub section within section, used for spacing and alignment purposes 
                 DON'T USE FOR THE LAST SUB-SECTION FOR THE SECTION TO AVOID EXTRA MARGIN (we want only 6rem)*/
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
 .highlight-area { /*area where the background is light grey and covers the entire width */
@@ -202,11 +202,11 @@ strong{
 figcaption{
   width: 97%;
   color: #B6B6B6;
-  margin-left: 0.5rem;
+  margin-left: 0.4rem;
   padding: 0;
   font-size: 14px;
-  letter-spacing: -0.2px;
-  line-height: 1.3;
+  letter-spacing: -0.1px;
+  line-height: 1.4;
   font-family: 'Quicksand';
 }
 
@@ -529,8 +529,9 @@ input[type="text"] {
 /* ----------------------- FOOTER SECTION SPECIFIC ---------------------------*/
 #footer-divider {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 1.5fr 1fr;
   margin-top: 2rem;
+  align-items: end;
 }
 
 #footer-divider-right {
@@ -538,7 +539,7 @@ input[type="text"] {
 }
 #footer-divider p {
   width: 100%;
-  margin-top: 0.5rem;
+  margin-top: 0rem;
 }
 
 
@@ -824,6 +825,49 @@ input[type="text"] {
   margin-top: -14rem;
 }
 
+/* ----------------------- PROJECT PAGE - WEALTHSIMPLE SPECIFIC ---------------------------*/
+#wealthsimple-design-overview {
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2rem;
+}
+#wealthsimple-design-overview .image-with-frame{
+  margin-top: 0;
+}
+
+#wealthsimple-problem-space{
+  grid-template-columns: 1.5fr 1fr;
+}
+
+#wealthsimple-problem-statement{
+  text-align: center;
+}
+
+#wealthsimple-design-platform{
+  grid-template-columns: 2fr 1fr;
+  gap: 5rem;
+}
+
+#wealthsimple-design-question {
+  text-align: center;
+}
+
+#wealthsimple-research > div:nth-child(odd) {
+  grid-template-columns: 2fr 1fr;
+}
+
+#wealthsimple-research > div:nth-child(even) {
+  grid-template-columns: 1fr 2fr;
+}
+
+.wealthsimple-solution-content {
+  margin-bottom: 2rem;
+}
+
+#wealthsimple-second-solution-images, #wealthsimple-third-solution-images {
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1rem;
+}
+
 /* mobiles */
 @media only screen and (max-width: 768px) {
   /* --- RABBITATS --- */
@@ -884,15 +928,9 @@ img {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Drop shadow */
 }
 
-image-with-frame + .image-with-caption,
-.image-with-caption + .image-with-frame,
-.image-with-caption + .image-with-caption,
-.image-with-frame + .image-with-frame {
-  margin-top: 1rem;
-}
-
 .image-with-caption figcaption {
-  margin-top: 0.2rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .image-with-caption-horizontal { /* in cases where the caption is on the right or left side of the image */
@@ -910,9 +948,9 @@ image-with-frame + .image-with-caption,
 
 
 .social-logo {
-  margin-right: 2rem;
-  width: 2rem;
-  height: 2rem;
+  margin-right: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
   display: inline-block;
   position: relative;
   background-size: cover;
