--- a/style.css
+++ b/style.css
@@ -60,10 +60,10 @@ section.visible {
 
 .highlight-area { /*area where the background is light grey and covers the entire width */
   margin-top: 2rem;
-  margin-left: -19.5%;
-  margin-right: -19.5%;
-  padding-left: 19.5%;
-  padding-right: 19.5%;
+  margin-left: -50%;
+  margin-right: -50%;
+  padding-left: 50%;
+  padding-right: 50%;
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   background-color: #2C2C2C;
@@ -114,12 +114,7 @@ section.visible {
     margin-left: 20%;
     margin-right: 20%;
   }
-  .highlight-area { /*area where the background is light grey and covers the entire width */
-    margin-left: -33.5%;
-    margin-right: -33.5%;
-    padding-left: 33.5%;
-    padding-right: 33.5%;
-  }
+  
 }
 
 /* ----------------------- BASIC ELEMENT Related ---------------------------*/
@@ -157,7 +152,7 @@ h2 {
   letter-spacing: 0.3px;
   line-height: 1.2;
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 h3 {
@@ -278,6 +273,7 @@ input[type="text"] {
   }
   h2 {
     font-size: 16px;
+    margin-bottom: 0.8rem;
   }
   h3 {
     font-size: 11px;
@@ -429,6 +425,7 @@ input[type="text"] {
   margin-top: 4rem;
   margin-bottom: 2rem;
   margin-right: 2rem;
+  z-index: 1000;
 }
 
 #side-bar-logo-list {
@@ -569,6 +566,98 @@ input[type="text"] {
   width: 100%;
   background: #C22022;
   z-index: -1;
+}
+
+/* ----------------------- ABOUT PAGE SPECIFIC ---------------------------*/
+#about-me-and-my-background{
+  grid-template-columns: 1fr 1.5fr;
+  gap: 5rem;
+  align-items: center;
+}
+#about-activity-list {
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 2rem;
+}
+.about-activity-tile {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 1rem;
+  background-color: #2C2C2C;
+  border-radius: 0.5rem;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
+}
+.about-activity-tile figcaption {
+  text-align: left;
+  margin-top: 1rem;
+}
+
+#about-lists-of-goals {
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 0.8rem;
+}
+
+.about-single-goal-list{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.about-goal {
+  display: flex;
+}
+
+.about-goal-links h3 {
+  display: inline-block;
+  box-shadow: inset 0 -1px 0 transparent;
+  transition: box-shadow 0.3s ease;
+}
+
+.about-goal-links:hover h3 {
+  box-shadow: inset 0 -1px 0 #C22022;
+}
+
+.about-goal h3 {
+  margin-bottom: 0;
+  text-transform: none;
+}
+
+.about-goal img {
+  height: 1em; /* Set the image height to match the font height */
+  width: auto; /* Maintain the image's aspect ratio */
+  margin-right: 0.5rem;
+}
+
+@media only screen and (max-width: 768px) {
+  #about-me-and-my-background, #about-activity-list {
+    grid-template-columns: 1fr;
+    gap: 1rem;
+  }
+
+  .about-activity-tile {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0.8rem;
+    background-color: #2C2C2C;
+    border-radius: 0.5rem;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
+  }
+
+  .about-activity-tile figcaption {
+    margin-top: 0.5rem;
+  }
+
+  #about-lists-of-goals {
+    grid-template-columns: 1fr;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .about-single-goal-list{
+    margin-bottom: 0.25rem;
+  }
 }
 
 /* ----------------------- Project page specific (general elements for all the project pages) ---------------------------*/
