--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
   box-sizing: border-box;
 }
 
+body, html {
+  overflow-x: hidden;
+}
+
 /* ----------------------- PAGE and SECTION Related ---------------------------*/
 body{
   background-color: #222222;
@@ -87,9 +91,11 @@ section.visible {
 }
 
 @media only screen and (max-width: 768px) { /* for a smaller screen */
-  
+  #content {
+    margin-top: 5rem;
+  }
   .sub-section {
-    margin-bottom: 1.5rem;
+    margin-bottom: 2rem;
   }
   .section {
     margin-bottom: 3rem;
@@ -230,41 +236,23 @@ em {
 }
 
 .button {
-  background-color: #C22022;
-  border: none;
+  background-color: #2C2C2C;
+  border: 1px solid #635E5D;
   border-radius: 0.5rem;
   color: white;
-  padding: 0.5rem 4rem;
+  padding: 0.7rem 2rem;
   margin-top: 0.5rem;
   text-align: center;
   text-decoration: none;
-  font-size: 18px;
-  transition: border-color 0.2s ease;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  transition: border-color background-color 0.3s ease;
 }
 
 .button:hover, .button:focus{
-  background-color: white;
-  color: #C22022;
+  background-color: #C22022;
+  border: 1px solid #C22022;
   cursor: pointer;
-}
-
-input[type="radio"] {
-    accent-color: #33415C;
-    cursor: pointer;
-}
-
-input[type='submit'] {
-  text-decoration: none;
-}
-
-input[type="text"] {
-  padding: 15px;
-  padding-left: 30px;
-  background-color: #33415C;
-  border-radius: 2rem;
-  border-style: solid;
-  border-color: #002855;
-  color: white;
 }
 
 @media only screen and (max-width: 768px) {
@@ -284,21 +272,16 @@ input[type="text"] {
   figcaption {
     font-size: 10px;
   }
+  .button {
+    font-size: 12px;
+    padding: 0.5rem 1.5rem;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
 }
 
 /* ----------------------- CUSTOM BASIC ELEMENT Related ---------------------------*/
-
-.buttons { 
-  font-family: 'Quicksand', sans-serif;
-  text-decoration: none;
-  background-color: #023E7D;
-  border-radius: 0.7rem;
-  color: white;
-  cursor: pointer;
-  width: 2rem;
-  padding: 0.2rem;
-  margin-right: 0.2rem;
-}
 
 .number-title {
   font-family: 'Dosis', serif;
@@ -368,8 +351,11 @@ input[type="text"] {
 }
 
 .navigation-items a{
-  font-size: 18px; 
-  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 16px; 
+  font-family: 'Dosis', sans-serif;
+  text-transform: uppercase;
+  line-height: 1.2;
+  letter-spacing: 0.15px;
   text-decoration: none;
   color: white;
   margin-left: 2rem;
@@ -398,7 +384,7 @@ input[type="text"] {
   #logo{ /* centre the logo when the screen width is small */
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 1rem;
+    margin-bottom: 0.3rem;
   }
 
   .navigation-items{
@@ -535,8 +521,8 @@ input[type="text"] {
 #footer-divider {
   display: grid;
   grid-template-columns: 1.5fr 1fr;
-  margin-top: 2rem;
-  align-items: end;
+  margin-top: 1rem;
+  align-items: start;
 }
 
 #footer-divider-right {
@@ -555,6 +541,7 @@ input[type="text"] {
 #footer-content h2 {
   position: relative;
   z-index: 0;
+  margin-bottom: 1rem;
 }
 
 #footer-content h2::after {
@@ -566,6 +553,27 @@ input[type="text"] {
   width: 100%;
   background: #C22022;
   z-index: -1;
+}
+
+@media only screen and (max-width: 768px) {
+  #footer-content h2 {
+    margin-bottom: 0.8rem;
+  }
+  #footer-divider {
+    grid-template-columns: 1fr;
+    margin-top: 0.8rem;
+    gap: 1.5rem;
+  }
+  #footer-divider-right {
+    text-align: left;
+    order: 1;
+  }
+  #footer-divider-left {
+    display: flex;             
+    justify-content: space-between;
+    width: 40%;    
+    order: 2;
+  }
 }
 
 /* ----------------------- ABOUT PAGE SPECIFIC ---------------------------*/
@@ -770,6 +778,10 @@ input[type="text"] {
   text-align: center;
 }
 
+#macaron-share-prototype h2{
+  margin-bottom: 0;
+}
+
 #macaron-brand-description{
   grid-template-columns: 1.5fr 1fr;
   justify-content: center; 
@@ -781,13 +793,6 @@ input[type="text"] {
   align-items: center;
 }
 
-/*
-#macaron-first-role-content, #macaron-second-role, #macaron-third-role-content {
-  grid-template-columns: auto 1fr;
-  gap: 1rem; 
-  align-items: start; 
-}
-*/
 #macaron-second-role-bottom{
   grid-template-columns: 1fr 1.5fr;
   align-items: top;
@@ -1063,6 +1068,9 @@ input[type="text"] {
     order: 2;
   }
 
+  #macaron-share-prototype{
+    gap: 1rem;
+  }
   #macaron-first-role{
     display: flex;
     flex-direction: column;
@@ -1073,7 +1081,6 @@ input[type="text"] {
   #macaron-first-role .image-with-caption {
     order: 2;
   }
-
   #macaron-third-role{
     display: flex;
     flex-direction: column;
@@ -1084,6 +1091,12 @@ input[type="text"] {
   #macaron-third-role .image-with-caption {
     order: 2;
   }
+  .macaron-features p{
+    margin-top: 0;
+  }
+  #macaron-first-feature-content, #macaron-second-feature-content, #macaron-third-feature-content {
+    gap: 0;
+  } 
 
   .craftconnect-feature {
     display: flex;
@@ -1112,6 +1125,12 @@ input[type="text"] {
   }
   .wealthsimple-research-element .numbered-title-section {
     order: 1;
+  }
+  .wealthsimple-solution-content {
+    gap: 0;
+  }
+  .wealthsimple-solution-content p{
+    margin-top: 0;
   }
 }
 
