--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ section.visible {
 
 @media only screen and (max-width: 768px) { /* for a smaller screen */
   #content {
-    margin-top: 5rem;
+    margin-top: 7rem;
   }
   .sub-section {
     margin-bottom: 3rem;
@@ -454,14 +454,77 @@ em {
 
 /* ----------------------- HOME PAGE - INTRODUCTION SECTION SPECIFIC ---------------------------*/
 #introduction {
-  grid-template-columns: 1.5fr 1fr;
-  gap: 5rem;
+  grid-template-columns: 1.2fr 1fr;
+  gap: 1rem;
+}
+
+#title-heading {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#title-heading::after {
+  content: "";
+  display: block;
+  height: 5px;
+  width: 3rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  background-color: #C22022;
+}
+
+#title-heading h1 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+#title-heading h1::after {
+  content: none;
+}
+
+#heading-hello-howard{
+  color: #B6B6B6;
+}
+
+#heading-digital-product-designer{
+  font-size: clamp(24px, 6vw, 86px);
+}
+
+#introduction-left p{
+  width: 80%;
 }
 
 @media only screen and (max-width: 768px) {
   #introduction {
     grid-template-columns: 1fr;
-    gap: 1rem;
+    gap: 1.5rem;
+  }
+
+  #introduction-left h1{
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #title-heading::after {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  #introduction-left p{
+    width: 100%;
+  }
+
+  #introduction-right {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #heading-digital-product-designer{
+    font-size: 42px;
   }
 }
 /* ----------------------- HOME PAGE - PROJECT SECTION SPECIFIC ---------------------------*/
