--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ h1 {
   font-size: 28px;
   font-weight: 500;
   text-transform: uppercase;
-  letter-spacing: 0.4px;; /*calculated via chatgpt */
+  letter-spacing: 0.4px; /*calculated via chatgpt */
   line-height: 1.08;
   color: #F5F5F5;
   margin-bottom: 2rem;
@@ -467,7 +467,7 @@ em {
 #title-heading::after {
   content: "";
   display: block;
-  height: 5px;
+  height: 3px;
   width: 3rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -487,7 +487,8 @@ em {
 }
 
 #heading-digital-product-designer{
-  font-size: clamp(24px, 6vw, 86px);
+  font-size: clamp(24px, 6vw, 72px);
+  letter-spacing: 0.8px;
 }
 
 #introduction-left p{
