--- a/style.css
+++ b/style.css
@@ -135,8 +135,9 @@ h1 {
 	position: relative;
   font-size: 28px;
   font-weight: 500;
+  font-kerning: normal;
   text-transform: uppercase;
-  letter-spacing: 0.4px; /*calculated via chatgpt */
+  letter-spacing: 0.07rem;
   line-height: 1.08;
   color: #F5F5F5;
   margin-bottom: 2rem;
@@ -179,7 +180,7 @@ h3 {
   text-transform: uppercase;
   color: #626262;
   line-height: 1.2; /* 120% */
-  letter-spacing: 0.15px; /* 1% of 15px */
+  letter-spacing: 0.035em;
   margin-top: 0rem;
   margin-bottom: 0.25rem;
 }
@@ -216,8 +217,6 @@ p + div, div + p{
 }
 
 strong{
-  font-family: 'Quicksand';
-  font-weight: 500;
   color: #C22022;
 }
 
@@ -264,6 +263,13 @@ em {
   background-color: #C22022;
   border: 1px solid #C22022;
   cursor: pointer;
+}
+
+/*KERNINGS */
+
+/*H1 C and T */
+.kern-CT {
+  margin-right: 0.08em;
 }
 
 @media only screen and (max-width: 768px) {
@@ -367,7 +373,7 @@ em {
   font-family: 'Dosis', sans-serif;
   text-transform: uppercase;
   line-height: 1.2;
-  letter-spacing: 0.15px;
+  letter-spacing: 0.035em;
   text-decoration: none;
   color: white;
   margin-left: 2rem;
@@ -502,7 +508,7 @@ em {
 
 #heading-digital-product-designer h1{
   font-size: clamp(64px, 6vw, 80px);
-  letter-spacing: 0.8px;
+  letter-spacing: 0.03em;
   text-indent: -0.08em;
   display: block;
   text-align: left;
