--- a/style.css
+++ b/style.css
@@ -586,13 +586,12 @@ em {
 /* ----------------------- HOME PAGE - PROJECT SECTION SPECIFIC ---------------------------*/
 .project {
   background-color: #2C2C2C;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
   display: grid;
   grid-template-columns: 40% 60%;
   gap: 1rem;
-  padding: 1rem;
   margin-bottom: 2rem;
-  border: 2px solid transparent;
+  border: 2px solid #222222;
   transition: border-color 0.3s ease;
 }
 
@@ -605,13 +604,29 @@ em {
   display: flex;
   flex-direction: column;
   position: relative;
-  padding-right: 1rem;
+  padding-right: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
-.project-right button {
-  position: absolute;
-  bottom: 1rem;
-  right: 1rem;
+.project-right-bottom{
+  margin-top: auto;
+  display: flex;
+}
+
+.project-tag-list{
+  display: flex;
+  gap: 0.5rem;
+}
+
+.project-tag{
+  font-size: 12px;
+  margin-top: auto;
+  margin-right: auto;
+  padding: 0.5rem 0.8rem;
+  border-radius: 1rem;
+  background-color: #666363;
+  color: #FFFFFF;
 }
 
 .project h2 {
@@ -633,16 +648,29 @@ em {
 @media only screen and (max-width: 768px) {
   .project {
     grid-template-columns: 1fr;
-    padding: 0.5rem;
+    gap: 0.5rem;
   }
-
 
   .project img {
     margin-bottom: 0;
   }
 
   .project-right {
-    padding-right: 0;
+    padding: 0.5rem;
+    gap: 0.5rem;
+  }
+
+  .project-right p {
+    margin-top: 0;
+  }
+
+  .project-right-bottom {
+    margin-top: 0.5rem;
+  }
+  
+  .project-tag{
+    font-size: 8px;
+    padding: 0.25rem 0.5rem;
   }
 }
 
@@ -1299,7 +1327,7 @@ img {
   align-self: flex-start;
   padding: 0.5rem;
   background-color: #2C2C2C;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); 
 }
 
@@ -1307,7 +1335,7 @@ img {
   align-self: flex-start;
   padding: 0.5rem;
   background-color: #2C2C2C;
-  border-radius: 0.5rem;
+  border-radius: 0.25rem;
   display: inline-block; 
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Drop shadow */
 }
@@ -1423,6 +1451,8 @@ img {
 
 .project-image {
   width: 100%;
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
 }
 
 .project-select-icon {
@@ -1441,8 +1471,8 @@ img {
 
 @media only screen and (max-width: 768px)  { 
   .project-select-icon {
-    width: 2rem;
-    height: 2rem;
+    width: 1.5rem;
+    height: 1.5rem;
   }
 }
 
